fix(LocalizadoresHeroSection): enhance mobile layout and text styles for improved readability and responsiveness

--- a/src/app/localizadores/components/HeroSection/LocalizadoresHeroSection.module.scss
+++ b/src/app/localizadores/components/HeroSection/LocalizadoresHeroSection.module.scss
@@ -19,9 +19,13 @@
 
       @include respond-to-max("laptop") {
         display: block;
-        width: 80vw;
+        width: 85vw;
         height: auto;
         max-width: 500px;
+        object-fit: contain;
+        aspect-ratio: unset !important;
+
+        margin-bottom: -2.5rem;
       }
     }
 
@@ -42,6 +46,73 @@
 
     .hero__text__mobile {
       display: none;
+
+      @include respond-to-max("laptop") {
+        align-self: start;
+
+        margin: 1.5rem 15px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+          font-size: clamp(16px, 9vw, 100px);
+          padding: 0;
+          margin-bottom: 0.5rem;
+          text-wrap: balance;
+          text-align: center;
+          background: linear-gradient(
+            to right,
+            #50b8f8 35%,
+            #1ca5f6 50%,
+            #9930f4 100%
+          );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+          font-weight: 900;
+          line-height: 1.1;
+          filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+          -webkit-filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+
+          span {
+            font-size: clamp(16px, 10.5vw, 100px);
+          }
+
+          .hide__mobile {
+            display: none;
+          }
+        }
+
+        p {
+          font-size: clamp(16px, 4.5vw, 80px);
+          text-align: center;
+          font-weight: 400;
+          text-wrap: balance;
+          line-height: 1.4;
+          padding: 0 5vw;
+          margin-top: 1rem;
+          color: #fff;
+
+          margin: 0.5rem 0;
+
+          span {
+            font-size: clamp(16px, 6vw, 80px);
+            font-weight: 600;
+          }
+        }
+
+        .separador__text {
+          width: 60vw;
+          height: auto;
+        }
+
+        .hero__btn {
+          margin-bottom: 2rem;
+          margin-top: 2rem;
+          padding: 0.5rem 2rem;
+        }
+      }
     }
   }
 }
@@ -51,29 +122,6 @@
     .hero__content {
       .hero__text {
         display: none;
-      }
-      .hero__text__mobile {
-        display: block;
-        color: #fff;
-
-        h1 {
-          font-size: clamp(16px, 5.5vw, 30px);
-          text-align: center;
-          padding: 0 5vw;
-
-          font-weight: 700;
-          line-height: 1.2;
-
-          span {
-            font-size: clamp(14px, 3vw, 22px);
-            text-align: center;
-          }
-        }
-
-        p {
-          font-size: clamp(12px, 2.5vw, 20px);
-          text-align: center;
-        }
       }
     }
   }
